mt-9, hidden block-xl

--- a/help/help.html
+++ b/help/help.html
@@ -547,7 +547,7 @@
                                             class="_jxxpcd"><span class="_kaq6tx"
                                               style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                             class="_tcp689">Log in or sign up </span></a></div>
-                                      <div class="_pawvzww">
+                                      <div class="hidden block-xl">
                                         <div class="l4u7xar dir dir-ltr">
                                           <div>
                                             <div class="lm8if50 dir dir-ltr">We’re here for you</div>
