--- a/help/host-liability-insurance.html
+++ b/help/host-liability-insurance.html
@@ -548,7 +548,7 @@
                         </main>
                       </div>
                       <div class="s7r7gee dir dir-ltr" style="--sidebar-padding-top:34px;">
-                        <div class="_pawvzww"></div>
+                        <div class="hidden block-xl"></div>
                         <aside class="cpwcjur dir dir-ltr">
                           <section>
                             <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
