--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -920,7 +920,7 @@
                       </main>
                     </div>
                     <div class="s7r7gee dir dir-ltr" style="--sidebar-padding-top: 34px">
-                      <div class="_pawvzww" style="margin-bottom: 2rem">
+                      <div class="hidden block-xl" style="margin-bottom: 2rem">
                         <div class="lksobbu dir dir-ltr" data-testid="article-login-prompt">
                           <div class="l171tj0s dir dir-ltr">
                             Get help with your reservations, account, and
