--- a/listings-product/contact-host.html
+++ b/listings-product/contact-host.html
@@ -1616,7 +1616,7 @@
                                                         </div>
                                                       </div>
                                                     </div>
-                                                    <div class="_y138ax">
+                                                    <div class="mt-9">
                                                       <div class="reserve-container__rate-table-wrapper dir dir-ltr">
                                                         <div>
                                                           <div
