--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -6405,7 +6405,7 @@
                                                       </div>
                                                     </span></div>
                                                   <div class="_gvaxra">
-                                                    <div class="_pawvzww">
+                                                    <div class="hidden block-xl">
                                                       <div class="_rfhlvm"></div>
                                                     </div>
                                                     <div class="_1wfwiik"><span>
