--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -242,7 +242,7 @@
                                         Copy
                                       </button>
                                     </div>
-                                    <div class="_c78vzhw">
+                                    <div class="mt-6">
                                       <button type="button" class="btn-outline">
                                         Skip
                                       </button>
