--- a/help/feedback.html
+++ b/help/feedback.html
@@ -542,7 +542,7 @@
                           class="s7r7gee dir dir-ltr"
                           style="--sidebar-padding-top: undefinedpx"
                         >
-                          <div class="_17ctt5">
+                          <div class="hidden-xl">
                             <hr class="hotd59s dir dir-ltr" />
                           </div>
                           <aside class="c13melw6 dir dir-ltr">
