--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -179,7 +179,7 @@
             </header>
             <div class="p1l24gcu dir dir-ltr">
               <div class="abe8ors dir dir-ltr">
-                <div class="_17ctt5 hidden-xl">
+                <div class="hidden-xl hidden-xl">
                   <div class="l148h9rn dir dir-ltr">
                     <a data-no-client-routing="true" href="/login?redirect_url=/help/article/252/searching-for-stays"
                       class="_6hkhatt"><span class="_jxxpcd"><span class="_kaq6tx" style="
