--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -182,7 +182,7 @@
                               </div>
                               <div class="_1mntuki" style="margin-left: 16px; margin-right: 16px">
                                 <div class="_11oyobo"></div>
-                                <div class="_17ctt5">
+                                <div class="hidden-xl">
                                   <div class="mt-4">
                                     <div class="_ixuuws">
                                       <div class="_14xy4yu">
