--- a/payments/payment.html
+++ b/payments/payment.html
@@ -413,7 +413,7 @@
                                                           </span>
                                                         </span>
                                                       </div>
-                                                      <div class="_17ctt5">
+                                                      <div class="hidden-xl">
                                                         <span
                                                           class="confirm-pay__trip-detail-rate-wrapper"
                                                         >
