--- a/help/help.html
+++ b/help/help.html
@@ -543,7 +543,7 @@
                                 >
                                   <div class="td3c3al dir dir-ltr">
                                     <div class="lhaa7s2 dir dir-ltr" data-testid="login-prompt">
-                                      <div class="_17ctt5"><a data-no-client-routing="true" href="/login?redirect_url=/help" class="_6hkhatt"><span
+                                      <div class="hidden-xl"><a data-no-client-routing="true" href="/login?redirect_url=/help" class="_6hkhatt"><span
                                             class="_jxxpcd"><span class="_kaq6tx"
                                               style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                             class="_tcp689">Log in or sign up </span></a></div>
